feat: add description of the project